--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,8 +1,82 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="74a4c0">  <td>24/10/10 11:40:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Arieh_UAT_LoginPageTest.testValidCredentials()[pri:0, instance:com.arieh.tests.Arieh_UAT_LoginPageTest@78e4deb0]">testValidCredentials</td> 
-  <td>main@959629210</td>   <td></td> </tr>
-<tr bgcolor="74a4c0">  <td>24/10/10 11:39:54</td>   <td>-7122</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Arieh_UAT_LoginPageTest.preBase()[pri:0, instance:com.arieh.tests.Arieh_UAT_LoginPageTest@78e4deb0]">&gt;&gt;preBase</td> 
-<td>&nbsp;</td>  <td>main@959629210</td>   <td></td> </tr>
+<tr bgcolor="c79c86">  <td>24/11/11 16:30:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Arieh_UAT_LoginPageTest.testEmptyPassword()[pri:0, instance:com.arieh.tests.Arieh_UAT_LoginPageTest@2dcd168a]">testEmptyPassword</td> 
+  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="799bef">  <td>24/11/11 16:29:07</td>   <td>-96923</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Arieh_UAT_DispatchPageTest.preBase()[pri:0, instance:com.arieh.tests.Arieh_UAT_DispatchPageTest@24ba9639]">&gt;&gt;preBase</td> 
+<td>&nbsp;</td>  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="c79c86">  <td>24/11/11 16:31:21</td>   <td>37200</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Arieh_UAT_LoginPageTest.preBase()[pri:0, instance:com.arieh.tests.Arieh_UAT_LoginPageTest@2dcd168a]">&gt;&gt;preBase</td> 
+<td>&nbsp;</td>  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="c79c86">  <td>24/11/11 16:31:21</td>   <td>37200</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Arieh_UAT_LoginPageTest.preBase()[pri:0, instance:com.arieh.tests.Arieh_UAT_LoginPageTest@2dcd168a]">&gt;&gt;preBase</td> 
+<td>&nbsp;</td>  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="8ba3c7">  <td>24/11/11 16:30:16</td>   <td>-28560</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Arieh_UAT_AddDispatchPageTest.preBase()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddDispatchPageTest@6155d082]">&gt;&gt;preBase</td> 
+<td>&nbsp;</td>  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="c79c86">  <td>24/11/11 16:31:21</td>   <td>37200</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Arieh_UAT_LoginPageTest.preBase()[pri:0, instance:com.arieh.tests.Arieh_UAT_LoginPageTest@2dcd168a]">&gt;&gt;preBase</td> 
+<td>&nbsp;</td>  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="b77ea8">  <td>24/11/11 16:29:55</td>   <td>-48722</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Arieh_UAT_AddStockPageTest.tearDownTest()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddStockPageTest@47f9738]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="c79c86">  <td>24/11/11 16:31:24</td>   <td>39709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Arieh_UAT_LoginPageTest.tearDownTest()[pri:0, instance:com.arieh.tests.Arieh_UAT_LoginPageTest@2dcd168a]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="c79c86">  <td>24/11/11 16:31:24</td>   <td>39709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Arieh_UAT_LoginPageTest.tearDownTest()[pri:0, instance:com.arieh.tests.Arieh_UAT_LoginPageTest@2dcd168a]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="c79c86">  <td>24/11/11 16:31:24</td>   <td>39709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Arieh_UAT_LoginPageTest.tearDownTest()[pri:0, instance:com.arieh.tests.Arieh_UAT_LoginPageTest@2dcd168a]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="b77ea8">  <td>24/11/11 16:29:41</td>   <td>-63184</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Arieh_UAT_AddStockPageTest.testBalanceForNewStock()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddStockPageTest@47f9738]">testBalanceForNewStock</td> 
+  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="8ba3c7">  <td>24/11/11 16:30:16</td>   <td>-28560</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Arieh_UAT_AddDispatchPageTest.preBase()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddDispatchPageTest@6155d082]">&gt;&gt;preBase</td> 
+<td>&nbsp;</td>  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="c79c86">  <td>24/11/11 16:31:24</td>   <td>39672</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Arieh_UAT_LoginPageTest.testWithEmailClick()[pri:0, instance:com.arieh.tests.Arieh_UAT_LoginPageTest@2dcd168a]">testWithEmailClick</td> 
+  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="c79c86">  <td>24/11/11 16:31:24</td>   <td>39709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Arieh_UAT_LoginPageTest.tearDownTest()[pri:0, instance:com.arieh.tests.Arieh_UAT_LoginPageTest@2dcd168a]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="c79c86">  <td>24/11/11 16:31:24</td>   <td>39709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Arieh_UAT_LoginPageTest.tearDownTest()[pri:0, instance:com.arieh.tests.Arieh_UAT_LoginPageTest@2dcd168a]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="b77ea8">  <td>24/11/11 16:29:44</td>   <td>-60125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Arieh_UAT_AddStockPageTest.preBase()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddStockPageTest@47f9738]">&gt;&gt;preBase</td> 
+<td>&nbsp;</td>  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="799bef">  <td>24/11/11 16:29:19</td>   <td>-85413</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Arieh_UAT_DispatchPageTest.TestWithAddStockMultiple()[pri:0, instance:com.arieh.tests.Arieh_UAT_DispatchPageTest@24ba9639]">TestWithAddStockMultiple</td> 
+  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="8ba3c7">  <td>24/11/11 16:30:26</td>   <td>-18312</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Arieh_UAT_AddDispatchPageTest.testWithAddDispatch()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddDispatchPageTest@6155d082]">testWithAddDispatch</td> 
+  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="c79c86">  <td>24/11/11 16:30:41</td>   <td>-3179</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Arieh_UAT_LoginPageTest.testEmptyCredentials()[pri:0, instance:com.arieh.tests.Arieh_UAT_LoginPageTest@2dcd168a]">testEmptyCredentials</td> 
+  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="c79c86">  <td>24/11/11 16:31:24</td>   <td>39709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Arieh_UAT_LoginPageTest.tearDownTest()[pri:0, instance:com.arieh.tests.Arieh_UAT_LoginPageTest@2dcd168a]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="c79c86">  <td>24/11/11 16:31:24</td>   <td>39709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Arieh_UAT_LoginPageTest.tearDownTest()[pri:0, instance:com.arieh.tests.Arieh_UAT_LoginPageTest@2dcd168a]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="8ba3c7">  <td>24/11/11 16:30:36</td>   <td>-8267</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Arieh_UAT_AddDispatchPageTest.tearDownTest()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddDispatchPageTest@6155d082]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="b77ea8">  <td>24/11/11 16:29:53</td>   <td>-51148</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Arieh_UAT_AddStockPageTest.testOpeninForNewStock()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddStockPageTest@47f9738]">testOpeninForNewStock</td> 
+  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="c79c86">  <td>24/11/11 16:31:07</td>   <td>22944</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Arieh_UAT_LoginPageTest.testValidCredentials()[pri:0, instance:com.arieh.tests.Arieh_UAT_LoginPageTest@2dcd168a]">testValidCredentials</td> 
+  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="c79c86">  <td>24/11/11 16:31:21</td>   <td>37200</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Arieh_UAT_LoginPageTest.preBase()[pri:0, instance:com.arieh.tests.Arieh_UAT_LoginPageTest@2dcd168a]">&gt;&gt;preBase</td> 
+<td>&nbsp;</td>  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="c79c86">  <td>24/11/11 16:31:21</td>   <td>37200</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Arieh_UAT_LoginPageTest.preBase()[pri:0, instance:com.arieh.tests.Arieh_UAT_LoginPageTest@2dcd168a]">&gt;&gt;preBase</td> 
+<td>&nbsp;</td>  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="8ba3c7">  <td>24/11/11 16:30:36</td>   <td>-8267</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Arieh_UAT_AddDispatchPageTest.tearDownTest()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddDispatchPageTest@6155d082]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="799bef">  <td>24/11/11 16:29:29</td>   <td>-75058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Arieh_UAT_DispatchPageTest.tearDownTest()[pri:0, instance:com.arieh.tests.Arieh_UAT_DispatchPageTest@24ba9639]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="b77ea8">  <td>24/11/11 16:29:44</td>   <td>-60125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Arieh_UAT_AddStockPageTest.preBase()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddStockPageTest@47f9738]">&gt;&gt;preBase</td> 
+<td>&nbsp;</td>  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="c79c86">  <td>24/11/11 16:31:21</td>   <td>37200</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Arieh_UAT_LoginPageTest.preBase()[pri:0, instance:com.arieh.tests.Arieh_UAT_LoginPageTest@2dcd168a]">&gt;&gt;preBase</td> 
+<td>&nbsp;</td>  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="c79c86">  <td>24/11/11 16:30:47</td>   <td>2994</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Arieh_UAT_LoginPageTest.testEmptyUsername()[pri:0, instance:com.arieh.tests.Arieh_UAT_LoginPageTest@2dcd168a]">testEmptyUsername</td> 
+  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="c79c86">  <td>24/11/11 16:31:24</td>   <td>39709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Arieh_UAT_LoginPageTest.tearDownTest()[pri:0, instance:com.arieh.tests.Arieh_UAT_LoginPageTest@2dcd168a]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="c79c86">  <td>24/11/11 16:31:21</td>   <td>37200</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Arieh_UAT_LoginPageTest.preBase()[pri:0, instance:com.arieh.tests.Arieh_UAT_LoginPageTest@2dcd168a]">&gt;&gt;preBase</td> 
+<td>&nbsp;</td>  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="c79c86">  <td>24/11/11 16:31:21</td>   <td>36977</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Arieh_UAT_LoginPageTest.testWithCopyrightName()[pri:0, instance:com.arieh.tests.Arieh_UAT_LoginPageTest@2dcd168a]">testWithCopyrightName</td> 
+  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="c79c86">  <td>24/11/11 16:31:21</td>   <td>37200</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Arieh_UAT_LoginPageTest.preBase()[pri:0, instance:com.arieh.tests.Arieh_UAT_LoginPageTest@2dcd168a]">&gt;&gt;preBase</td> 
+<td>&nbsp;</td>  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="b77ea8">  <td>24/11/11 16:29:55</td>   <td>-48722</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Arieh_UAT_AddStockPageTest.tearDownTest()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddStockPageTest@47f9738]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="8ba3c7">  <td>24/11/11 16:30:26</td>   <td>-18312</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Arieh_UAT_AddDispatchPageTest.testWithAddDispatch()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddDispatchPageTest@6155d082]">testWithAddDispatch</td> 
+  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="c79c86">  <td>24/11/11 16:30:50</td>   <td>6156</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Arieh_UAT_LoginPageTest.testInvalidCredentials()[pri:0, instance:com.arieh.tests.Arieh_UAT_LoginPageTest@2dcd168a]">testInvalidCredentials</td> 
+  <td>main@512549200</td>   <td></td> </tr>
+<tr bgcolor="c79c86">  <td>24/11/11 16:30:54</td>   <td>9430</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Arieh_UAT_LoginPageTest.testSpecialCharactersInCredentials()[pri:0, instance:com.arieh.tests.Arieh_UAT_LoginPageTest@2dcd168a]">testSpecialCharactersInCredentials</td> 
+  <td>main@512549200</td>   <td></td> </tr>
 </table>
