--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\avisu\AppData\Local\Temp\testng-eclipse-100774119\testng-customsuite.xml</span>
+                    <span>C:\Users\avisu\AppData\Local\Temp\testng-eclipse--935071076\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\avisu\AppData\Local\Temp\testng-eclipse-100774119\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\avisu\AppData\Local\Temp\testng-eclipse--935071076\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -190,7 +190,7 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testWithOtpRetireve')
 data.setCell(0, 2, 'com.arieh.tests.Arieh_UAT_ResidualPageTest')
-data.setCell(0, 3, 1718);
+data.setCell(0, 3, 1810);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -222,9 +222,13 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">com.arieh.tests.Arieh_UAT_ResidualPageTest</div> <!-- chronological-class-name -->
+              <div class="configuration-suite before">
+                <span class="method-name">cleanAllureResults</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-suite before -->
               <div class="test-method">
                 <span class="method-name">testWithOtpRetireve</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-start">46 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
