--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="92d386">  <td>24/11/13 11:03:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Arieh_UAT_ResidualPageTest.testWithOtpRetireve()[pri:0, instance:com.arieh.tests.Arieh_UAT_ResidualPageTest@31ff43be]">testWithOtpRetireve</td> 
-  <td>main@973843173</td>   <td></td> </tr>
+<tr bgcolor="75a668">  <td>24/11/18 11:01:34</td>   <td>0</td> <td title="&gt;&gt;TestBase_Arieh.cleanAllureResults()[pri:0, instance:com.arieh.tests.Arieh_UAT_ResidualPageTest@1c33c17b]">&gt;&gt;cleanAllureResults</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@48361312</td>   <td></td> </tr>
+<tr bgcolor="92d386">  <td>24/11/18 11:01:34</td>   <td>41</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Arieh_UAT_ResidualPageTest.testWithOtpRetireve()[pri:0, instance:com.arieh.tests.Arieh_UAT_ResidualPageTest@1c33c17b]">testWithOtpRetireve</td> 
+  <td>main@48361312</td>   <td></td> </tr>
 </table>
