--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,48 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="75a668">  <td>24/11/18 11:01:34</td>   <td>0</td> <td title="&gt;&gt;TestBase_Arieh.cleanAllureResults()[pri:0, instance:com.arieh.tests.Arieh_UAT_ResidualPageTest@1c33c17b]">&gt;&gt;cleanAllureResults</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@48361312</td>   <td></td> </tr>
-<tr bgcolor="92d386">  <td>24/11/18 11:01:34</td>   <td>41</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Arieh_UAT_ResidualPageTest.testWithOtpRetireve()[pri:0, instance:com.arieh.tests.Arieh_UAT_ResidualPageTest@1c33c17b]">testWithOtpRetireve</td> 
-  <td>main@48361312</td>   <td></td> </tr>
+<tr bgcolor="b6decd">  <td>24/12/04 16:34:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Arieh_UAT_AddStockPageTest.tearDownTest()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddStockPageTest@6dab9b6d]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@443942537</td>   <td></td> </tr>
+<tr bgcolor="b6decd">  <td>24/12/04 16:34:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Arieh_UAT_AddStockPageTest.tearDownTest()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddStockPageTest@6dab9b6d]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@443942537</td>   <td></td> </tr>
+<tr bgcolor="b6decd">  <td>24/12/04 16:34:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Arieh_UAT_AddStockPageTest.tearDownTest()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddStockPageTest@6dab9b6d]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@443942537</td>   <td></td> </tr>
+<tr bgcolor="b6decd">  <td>24/12/04 16:33:52</td>   <td>-9964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Arieh_UAT_AddStockPageTest.preBase()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddStockPageTest@6dab9b6d]">&gt;&gt;preBase</td> 
+<td>&nbsp;</td>  <td>main@443942537</td>   <td></td> </tr>
+<tr bgcolor="b2bb6c">  <td>24/12/04 16:33:29</td>   <td>-33544</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Arieh_UAT_SupplierAddDispatchPageTest.testWithAddDispaptch()[pri:0, instance:com.arieh.tests.Arieh_UAT_SupplierAddDispatchPageTest@7331196b]">testWithAddDispaptch</td> 
+  <td>main@443942537</td>   <td></td> </tr>
+<tr bgcolor="717c97">  <td>24/12/04 16:32:36</td>   <td>-85733</td> <td title="&gt;&gt;TestBase_Arieh.cleanAllureResults()[pri:0, instance:com.arieh.tests.Arieh_UAT_SupplierAddDispatchPageTest@7331196b]">&gt;&gt;cleanAllureResults</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@443942537</td>   <td></td> </tr>
+<tr bgcolor="b6decd">  <td>24/12/04 16:33:38</td>   <td>-24027</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Arieh_UAT_AddStockPageTest.testBalanceForNewStock()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddStockPageTest@6dab9b6d]">testBalanceForNewStock</td> 
+  <td>main@443942537</td>   <td></td> </tr>
+<tr bgcolor="b6decd">  <td>24/12/04 16:33:52</td>   <td>-9964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Arieh_UAT_AddStockPageTest.preBase()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddStockPageTest@6dab9b6d]">&gt;&gt;preBase</td> 
+<td>&nbsp;</td>  <td>main@443942537</td>   <td></td> </tr>
+<tr bgcolor="b2bb6c">  <td>24/12/04 16:33:11</td>   <td>-50789</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Arieh_UAT_SupplierAddDispatchPageTest.preBase()[pri:0, instance:com.arieh.tests.Arieh_UAT_SupplierAddDispatchPageTest@7331196b]">&gt;&gt;preBase</td> 
+<td>&nbsp;</td>  <td>main@443942537</td>   <td></td> </tr>
+<tr bgcolor="b6decd">  <td>24/12/04 16:33:52</td>   <td>-9964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Arieh_UAT_AddStockPageTest.preBase()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddStockPageTest@6dab9b6d]">&gt;&gt;preBase</td> 
+<td>&nbsp;</td>  <td>main@443942537</td>   <td></td> </tr>
+<tr bgcolor="b2bb6c">  <td>24/12/04 16:33:29</td>   <td>-33540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Arieh_UAT_SupplierAddDispatchPageTest.closeTest()[pri:0, instance:com.arieh.tests.Arieh_UAT_SupplierAddDispatchPageTest@7331196b]">&lt;&lt;closeTest</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="b6decd">  <td>24/12/04 16:33:08</td>   <td>-54135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Arieh_UAT_AddStockPageTest.testAddStockCode()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddStockPageTest@6dab9b6d]">testAddStockCode</td> 
+  <td>main@443942537</td>   <td></td> </tr>
+<tr bgcolor="b6decd">  <td>24/12/04 16:32:57</td>   <td>-65094</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Arieh_UAT_AddStockPageTest.testAddStock4()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddStockPageTest@6dab9b6d]">testAddStock4</td> 
+  <td>main@443942537</td>   <td></td> </tr>
+<tr bgcolor="b6decd">  <td>24/12/04 16:33:51</td>   <td>-11189</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Arieh_UAT_AddStockPageTest.testOpeningForNewStock()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddStockPageTest@6dab9b6d]">testOpeningForNewStock</td> 
+  <td>main@443942537</td>   <td></td> </tr>
+<tr bgcolor="b6decd">  <td>24/12/04 16:34:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Arieh_UAT_AddStockPageTest.tearDownTest()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddStockPageTest@6dab9b6d]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@443942537</td>   <td></td> </tr>
+<tr bgcolor="b6decd">  <td>24/12/04 16:33:52</td>   <td>-9964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Arieh_UAT_AddStockPageTest.preBase()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddStockPageTest@6dab9b6d]">&gt;&gt;preBase</td> 
+<td>&nbsp;</td>  <td>main@443942537</td>   <td></td> </tr>
+<tr bgcolor="b6decd">  <td>24/12/04 16:34:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Arieh_UAT_AddStockPageTest.tearDownTest()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddStockPageTest@6dab9b6d]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@443942537</td>   <td></td> </tr>
+<tr bgcolor="b6decd">  <td>24/12/04 16:32:46</td>   <td>-75753</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Arieh_UAT_AddStockPageTest.testAddStock3()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddStockPageTest@6dab9b6d]">testAddStock3</td> 
+  <td>main@443942537</td>   <td></td> </tr>
+<tr bgcolor="b6decd">  <td>24/12/04 16:33:52</td>   <td>-9964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Arieh_UAT_AddStockPageTest.preBase()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddStockPageTest@6dab9b6d]">&gt;&gt;preBase</td> 
+<td>&nbsp;</td>  <td>main@443942537</td>   <td></td> </tr>
+<tr bgcolor="b6decd">  <td>24/12/04 16:33:52</td>   <td>-9964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Arieh_UAT_AddStockPageTest.preBase()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddStockPageTest@6dab9b6d]">&gt;&gt;preBase</td> 
+<td>&nbsp;</td>  <td>main@443942537</td>   <td></td> </tr>
+<tr bgcolor="b6decd">  <td>24/12/04 16:34:01</td>   <td>-605</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Arieh_UAT_AddStockPageTest.testWithSecondRow()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddStockPageTest@6dab9b6d]">testWithSecondRow</td> 
+  <td>main@443942537</td>   <td></td> </tr>
+<tr bgcolor="b6decd">  <td>24/12/04 16:34:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Arieh_UAT_AddStockPageTest.tearDownTest()[pri:0, instance:com.arieh.tests.Arieh_UAT_AddStockPageTest@6dab9b6d]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@443942537</td>   <td></td> </tr>
 </table>
